SONAR-18856 Fix SonarQube issues and BTT